Final draft for 10 Nov 2024

--- a/2024/2024-11-17.md
+++ b/2024/2024-11-17.md
@@ -1,3 +1,172 @@
+
+
+
+<!-- Topic dear to the heart of crypto people. Link to old column on bitcoiners getting inflation right. -->
+
+<!-- Global elections. We had two one-term presidents -- one from each major party, as it happens -- whose terms were marred by inflation of that era. -->
+
+<!-- Acknowledge the one-year inflation rate is down. -->
+
+<!-- However, costs are still going up. The cumulative four-year inflation rate is still causing sticker shock. -->
+
+<!-- Democratic messaging: Starts by mischaracterizing why it happens. -->
+
+<!-- That money printing started under Trump. It was shared. -->
+
+<!-- Write it on the chalkboard 500 times, like Bart Simpson if you have to for it to sink it. -->
+
+<!-- It's probably coming back. Big deficits, rate cuts, and tarriffs are a recipe for it to come back. -->
+
+<!-- Perhaps next time the Democrats. That won't just . Start by accurately telling people why. -->
+
+<!--
+
+String...
+
+How exactly did Donald Trump complete such a stunning political comeback?
+
+But the cumulative 4-year increase over Biden's term of office is still creating sticker shock.
+
+Bitcoin hit a new all-time high above TKTKTK and posted a gain of 11% for the week through Saturday evening trading in New York. Ether fared even etter, leaping 25% according to CoinMarketCap data. <!-- Links TK
+
+Some tech-focused and (mostly) nonpartisan notes on the U.S. election:
+
+Marcotte: American voters are swimming in a sea of ignorance, much of it in the form of online misinformation. https://www.salon.com/2024/11/08/americas-political-discordance-the-want-progressivism/
+
+### FIT21 probably passes.
+
+### But we better make it count.
+
+There won't be a second bite at the legislative apple. Also notable: There probably won't be anything done on AI.
+
+Vox on how Trump 2nd term will be different. <!-- Need YouTube link
+
+### Gary Gensler is out.
+
+TKTK https://www.coindesk.com/policy/2024/11/07/heres-how-quickly-gary-gensler-could-lose-his-sec-chair-gig-under-trump/
+
+### Inflation -- and the "everything rally" in asset markets -- will be back.
+
+https://www.washingtonpost.com/opinions/2024/11/06/election-2024-trump-celebrity-inflation-incumbent/
+
+TKTK
+
+### At best, Trump does nothing to solve crypto's biggest PR problem. He could even make it worse.
+
+TKTK
+
+### Is it really a win to get better at manipulating such a patently corrupt system?
+
+Have we become the very thing we were supposed to fix?
+
+- https://www.salon.com/2024/11/06/the-illusion-of-donald-and-the-fourth-founding-of-america/
+
+- https://www.salon.com/2024/11/07/its-time-to-prepare-for-the-sequel/
+
+- https://www.salon.com/2024/11/07/a-womens-survival-guide-for-the-second-administration/
+
+- https://slate.com/news-and-politics/2024/11/election-results-2024-the-real-reason-kamala-harris-lost.html
+
+- https://www.washingtonpost.com/style/power/2024/11/06/michael-fanone-election-results-jan-6-capitol-police/
+
+- Record bitcoin ETF inflows: https://www.coindesk.com/markets/2024/11/08/bitcoin-etf-see-record-13b-inflows-on-trump-win-fed-rate-cuts/ | https://decrypt.co/290785/blackrocks-bitcoin-etf-sets-record-for-biggest-single-day-flow-above-1-1-billion
+
+Most of the money is going to Republicans because, as I've often noted in the newsletter, the industry is irate over federal regulators' open hostility to crypto under President Biden. Back in February, I specifically predicted there could be a [round of political payback](https://peteramckay.medium.com/bitcoiners-strike-back-at-warren-da0603bfc1f9) in the form of donations as November neared.
+
+And so here we are, on the eve of the election. Frankly, although I agree the Securities and Exchange Commission has [overreached](https://www.reuters.com/business/finance/whats-stake-grayscales-spot-bitcoin-etf-case-against-sec-2023-08-29/) against crypto in many ways, I am not at all sold on the idea, popular among some celebrity entrepreneur types right now, that Donald Trump is the solution the industry needs right now.
+
+Three reasons why I say that:
+
+1. **Trump's legal woes, including TKTK convictions on business fraud,** are bad PR that the industry really doesn't need right now. Among the general public, we're still suffering from association with the likes of Sam Bankman-Fried. Like a lot of people reading this newsletter, I don't believe that perception is substantively true. But it would be a really good idea for us to *show* the public it's not true by shunning proven fraudsters from other industries, including Trump.
+
+- The Fed's money printing will continue.
+
+- An American CBDC seems less likely. Powell doesn't seem keen on the idea, and if Congress passes regulation of privately issued stablecoins, will there really be a market need for an "official" one?
+
+- Antitrust scrutiny of Big Tech will continue. In my opinion, this is underrated as a positive for people building producsts for a decentralized internet. Curtailing the monopolistic practices of the web2 companies should create new opportunities.
+
+
+- We've made this partisan. That dynamic won't go away easily.
+
+- Becoming more effective at Washington's inherently evil donor game isn't necessarily a good thing. probably inconsistent with the blockchain community's core values of decentralization.
+
+- Crypto's post-FTX PR problem remains unresolved.
+
+- The reign of bitcoin as king has been solidified. It's not a security.
+
+
+- We're going to get more tied to Wall Street.
+
+- Web3 is a vehicle for global collaboration, better than government or diplomacy.
+
+- To heal the U.S., fix the dollar.
+
+
+5 things politicians are getting wrong about crypto
+
+- No, it's not all a scam.
+- No, it's not going to just go away.
+- The difference between network protocols and companies built on top of them.
+- The flaws in their own dollar-based system.
+- The causes of inflation.
+
+
+
+String from the last few weeks. Some of this may be useful for newsletter, or perhaps social posts...
+
+- https://www.wsj.com/tech/personal-tech/password-security-two-factor-authentication-bank-email-phone-42a5f4cf?st=uTPpg6&reflink=desktopwebshare_permalink
+
+- VC's are embracing web3 + AI: https://www.coindesk.com/business/2024/10/24/why-web3-vcs-are-embracing-cryptoai/ |  Andreessen on AI models: https://techcrunch.com/2024/10/22/marc-andreessen-says-ai-model-makers-are-in-a-race-to-the-bottom-and-its-not-god-for-business/
+
+- Games that pay BTC to play: https://decrypt.co/205392/bitcoin-booming-you-earn-more-playing-free-games
+
+- New blockchain trilemma: https://www.coindesk.com/opinion/2024/10/18/the-new-blockchain-trilemma-is-here-and-its-not-about-technology/
+
+- Andreesen funded AI becomes a millionaire: https://www.theblock.co/post/322002/marc-andreessen-funded-ai-bot-becomes-a-millionaire-after-fartcoin-holdings-rally
+
+- Citadel's Griffin on what's wrong with Media: https://fortune.com/2024/10/11/citadel-ken-griffin-media/ <!-- Probably a good social share as well.
+
+- Talking career goals in intvus: https://www.fastcompany.com/91205202/how-should-i-talk-about-my-career-goals-in-an-interview
+
+
+### Week in Review: Nov. 3-9, 2024
+
+- https://www.coindesk.com/policy/2024/11/07/detroiters-will-be-able-to-pay-their-taxes-in-crypto-next-year-using-paypal/
+
+- Michigan's state pension system is expanding its crypto holdings. https://decrypt.co/290161/michigan-state-pension-fund-expands-crypto-holdings-10m-ethereum-buy
+
+- A FERC ruling dampened hopes that nuclear power plants will be able to sell power to tech companies at the scale they'd hoped for. https://www.wsj.com/business/energy-oil/nuclear-energys-ai-boom-blew-a-fuseheres-what-could-happen-next-aecb9724?st=5YwVgw&reflink=desktopwebshare_permalink
+
+- Nvidia added to the Dow. <!-- Link TK
+
+- Meta expands AI access to DoD. Hmmm... https://decrypt.co/290197/meta-ai-us-defense
+
+- Mt. Gox update: https://decrypt.co/290182/mt-gox-moves-2-2-billion-in-bitcoin-following-pushback-on-repayment-timeline
+
+- ChatGPT adds search: https://www.technologyreview.com/2024/11/05/1106603/how-chatgpt-search-paves-the-way-for-ai-agents/
+
+### Community
+
+- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
+
+### Odds & Ends
+
+- Goodall on people's bad tendencies versus those of chimps. https://wapo.st/3UCZwSO
+
+- Collectible banknotes are a $500 million a year market. https://www.wsj.com/finance/currencies/paper-money-banknote-collectors-1e57b07a?st=KVMagy&reflink=desktopwebshare_permalink
+
+_**That's it for now. Thanks for reading the newsletter today!**_
+
+_**About me: I'm a New York-based content creator with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization with other people getting up to speed on such stuff.**_
+
+ _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
+
+ _**To reach me directly with feedback, a story suggestion, or other queries, please email peter[at]w3w[dot]media.**_
+
+ _**Best wishes for a healthy and productive week ahead.**_ 😊
+-->
+
+
 # TKTKTK
 ## Week in Review: Nov. 10-16, 2024
 
@@ -10,7 +179,13 @@
 
 - Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
 
-- tk
+- https://www.coindesk.com/business/2024/11/07/coinbase-brings-bitcoin-to-solana-spurring-high-hopes-for-defi-surge/
+
+- How crypto is revolutionizing philanthropy. ([Salon](https://www.salon.com/2024/11/07/beyond-the-scandals-how-crypto-is-quietly-revolutionizing-philanthropy/))
+
+- HBR: Moderators alone can't protect online communities. https://hbr.org/2024/11/why-moderators-cant-protect-online-communities-on-their-own
+
+- Asteroid mining company SpaceForge got an FCC license. https://www.space.com/space-exploration/tech/asteroid-mining-company-astroforge-gets-1st-ever-fcc-license-for-commercial-deep-space-mission
 
 ### Community
 
