--- a/2024/2024-11-10.md
+++ b/2024/2024-11-10.md
@@ -1,189 +1,57 @@
-# U.S. election debriefing
+# The inflation next time
 ## Week in Review: Nov. 3-9, 2024
 
-![A ripe orange on the tree](https://w3w.news/img/lulucmy-unsplash-1920.jpg)
-*Photo by Lulucmy via Unsplash*
+![An exasperated grocery shopper staring at supermarket shelves](https://w3w.news/img/shopper-1920.jpg)
+*Photo by Viki Mohamad via Unsplash*
 
+**Like a lot of Americans,** I spent much of the week reading and watching election post mortems.
 
+Yes, prior to Tuesday's vote, we had in hand months of polling data, probability modeling, and prediction markets showing a close presidential race between Donald Trump and Kamala Harris. Still, I think most people will  agree that seeing Trump actually complete his political comeback was stunning in a certain way, whether you supported him or not. ([I didn't](https://x.com/peteramckay/status/1847230808894886058), for the record.)
 
-Some tech-focused and (mostly) nonpartisan notes on the U.S. election:
+If anything, the election result just created whole new questions about how and why that sit mostly outside the scope of simple [horserace-style](https://en.wikipedia.org/wiki/Horse_race_journalism) campaign metrics. The sheer variety of answers on offer in the U.S. press right now is truly stunning, some of them so directly contradictory it's kind of hilarious. Fittingly, Comedy Central host Desi Lydic captured the phenomenon nicely in [her post mortem monologue](https://youtu.be/hPHH5trgC1w?si=Cp7DusX1XF6QNrCE&t=235).
 
-Marcotte: American voters are swimming in a sea of ignorance, much of it in the form of online misinformation. https://www.salon.com/2024/11/08/americas-political-discordance-the-want-progressivism/
+Sprinkled among her jokes, Lydic dropped this dead-serious truth bomb: "Honestly, i don't really care why she lost. I care why *he won*."
 
-### FIT21 probably passes.
+In that spirit, I have to say the subgenre of election analysis that prioritizes inflation to explain Trump's win strikes me as the most convincing. I say that because, compared to the other theories out there, it seems uniquely validated by [global events lately](https://www.vox.com/2024-elections/383208/donald-trump-victory-kamala-harris-global-trend-incumbents), not just the U.S. situation, and by [history](https://reason.com/2022/10/13/inflation-remixed/).
 
-### But we better make it count.
+On Thursday, Financial Times columnist John Burn-Murdoch offered a [sobering assessment](https://news.google.com/read/CBMicEFVX3lxTE5Oc3hOZ2ZkNFRFLXRTbXUyQ2dfaHh5WHBnODE5ZEMyY3JINnBhQ2UzZzFoTlIycTJmSDRjTWplUTBMSDZCeGtXOGpWbUljcmo3WjFjTUtpcGRFLWwxU0RtOFAyU1BfMk5tN180eF9IV0g?hl=en-US&gl=US&ceid=US%3Aen) from a remarkable series of elections around the world:
 
-There won't be a second bite at the legislative apple. Also notable: There probably won't be anything done on AI.
+*<blockquote>Economic and geopolitical conditions of the past year or two have created arguably the most hostile environment in history for incumbent parties and politicians across the developed world.*
 
-Vox on how Trump 2nd term will be different. <!-- Need YouTube link -->
+*From America’s Democrats to Britain’s Tories, Emmanuel’s Macron’s Ensemble coalition to Japan’s Liberal Democrats, even to Narendra Modi’s erstwhile dominant BJP, governing parties and leaders have undergone an unprecedented series of reversals this year.*
 
-### Gary Gensler is out.
+*The incumbents in every single one of the 10 major countries that have been tracked by the ParlGov global research project and held national elections in 2024 were given a kicking by voters. This is the first time this has ever happened in almost 120 years of records.*</blockquote>
 
-TKTK https://www.coindesk.com/policy/2024/11/07/heres-how-quickly-gary-gensler-could-lose-his-sec-chair-gig-under-trump/
+Central to this political narrative is inflation, which was a widespread  phenomenon globally during the COVID outbreak. Governments in many countries -- including but by no means limited to America -- essentially printed money through lower interest rates and fiscal stimulus to get through pandemic-related shutdowns of businesses.
 
-### Inflation -- and the "everything rally" in asset markets -- will be back.
+That money printing in turn devalued major currencies -- the very essence of *what inflation is*. That has created a lingering, visceral sticker shock that voters have taken out [on incumbent-party politicians worldwide](https://news.google.com/read/CBMikwFBVV95cUxORW1WSHZGMVFRZXg0Q3lnX2d5RDlZRGhlYWR5TDNTcjZBdDZhYzRWWk81aG8tNUh6ZllCQkhKeEZYRk5vTFhUSThKMnNDOXl2ODhaUERfU1N0ZFJBQ05zbUktQUhSNk9fUFlYZC1jT3h5LTFUclhpcWVXZmt3RWNOVHBxdlNicGFTci1YNkNDNkxpdEE?hl=en-US&gl=US&ceid=US%3Aen).
 
-https://www.washingtonpost.com/opinions/2024/11/06/election-2024-trump-celebrity-inflation-incumbent/
+The perils of such "easy money" policies are a familar topic to many bitcoiners. Hence the reason I'm glad to highlight it here, in a newsletter ostensibly about technology. (Fear not. I haven't forgotten.)
 
-TKTK
+As I've said before, bitcoiners [don't get enough nearly credit](https://github.com/peteramckay/w3wnewsletter/blob/master/2022/2022-06-19.md) for their diagnosis and analysis of inflation. Even if you don't care to buy bitcoin yourself, bitcoiners are often worth listening to regarding inflation purely for the sake of understanding the macroeconomics of it better.
 
-### At best, Trump does nothing to solve crypto's biggest PR problem. He could even make it worse.
+Perhaps even more important right now: Politicians could generally stand to think and talk about inflation more like bitconers do, if they want to succeed. That was evident during the recent U.S. presidential campaign, and I think it will continue to be so during Trump's new term.
 
-TKTK
+Again, bitcoiners' default explanation of inflation: If you print more money, its value tends to go down. The end.
 
-### Crypto has lost the moral high ground
+During the recent campaign, Harris seemed bent on offering voters perhaps anything *but* this simple take on an issue that was clearly front of mind for them. She ultimately seemed to arrive at [price gouging](https://www.cnn.com/2024/08/16/business/harris-price-gouging-ban-inflation/index.html) as the main bogeyman at fault for inflation, not money printing. And that just didn't hold water for voters, ultimately.
 
-TKTK
+In fairness, her campaign was also quick to point out that the 12-month rate of inflation has recently fallen [closer](https://www.pbs.org/newshour/politics/u-s-inflation-drops-to-lowest-point-in-3-years-at-2-4-percent-some-price-pressures-remain) to the Federal Reserve's traditional target of 2% as an acceptable level of price increases. While this is undeniably true, there are a couple of important caveats that complicate the picture.
 
+The first is that, as a dynamic measure of change, akin to acceleration in physics, a lower inflation rate doesn't necessarily mean the prices that voters see at the supermarket everyday are going *down* in absolute terms. *They're just going up more slowly.*
 
+That likely helps explain why the recent "drop" in 12-month measures of inflation hasn't done much to blunt voters' frustration at the *cumulative* inflation over the full term of the Biden administration. Looking at that bigger picture, Forbes recently [estimated](https://www.forbes.com/sites/dereksaul/2024/11/01/how-the-economy-really-fared-under-bidenharris-and-trump-from-jobs-to-inflation-final-update/) the 45-month change in U.S. consumer prices during Biden's term so far at 20.1%.
 
+Yikes.
 
+By not linking inflation and money printing explicitly, Harris also effectively abandoned a major argument that could have been useful in her favor: The pandemic -- and thus the easy money policies related to it -- in fact started [during Trump's first term](https://www.cnn.com/2020/03/27/politics/coronavirus-stimulus-house-vote/index.html).
 
-- https://www.salon.com/2024/11/06/the-illusion-of-donald-and-the-fourth-founding-of-america/
+Thus whatever inflation resulted was demonstrably not the sole fault of the Biden-Harris administration. Blame for it should really be shared by both parties. But that's not the impression the voting public got as Trump was able to pin inflation entirely on Democrats during the campaign.
 
-- https://www.salon.com/2024/11/07/its-time-to-prepare-for-the-sequel/
+Meanwhile, Harris prattled on about... price gouging. Great.
 
-- https://www.salon.com/2024/11/07/a-womens-survival-guide-for-the-second-administration/
+Politically, it's now too late for the vice president, of course. But if any congressional Democrats are reading this article, please be on alert: You may yet get a second chance to properly pin inflation on Trump in the new term.
 
-- https://slate.com/news-and-politics/2024/11/election-results-2024-the-real-reason-kamala-harris-lost.html
+His proposed policies of wide-randing tariffs, tax cuts, and (implicitly) big deficits beginning next year could be [a perfect recipe](https://time.com/7095898/donald-trump-economy-plan-2024/) for a resurgence in inflation. Coincidentally, these proposals come at a time when the Fed has begun [cutting interest rates](https://www.cnbc.com/2024/11/07/fed-rate-decision-november-2024.html) as well. So everyone in Washington will truly be doing their part to chip in.
 
-- https://www.washingtonpost.com/style/power/2024/11/06/michael-fanone-election-results-jan-6-capitol-police/
-
-- Record bitcoin ETF inflows: https://www.coindesk.com/markets/2024/11/08/bitcoin-etf-see-record-13b-inflows-on-trump-win-fed-rate-cuts/ | https://decrypt.co/290785/blackrocks-bitcoin-etf-sets-record-for-biggest-single-day-flow-above-1-1-billion
-
-Most of the money is going to Republicans because, as I've often noted in the newsletter, the industry is irate over federal regulators' open hostility to crypto under President Biden. Back in February, I specifically predicted there could be a [round of political payback](https://peteramckay.medium.com/bitcoiners-strike-back-at-warren-da0603bfc1f9) in the form of donations as November neared.
-
-And so here we are, on the eve of the election. Frankly, although I agree the Securities and Exchange Commission has [overreached](https://www.reuters.com/business/finance/whats-stake-grayscales-spot-bitcoin-etf-case-against-sec-2023-08-29/) against crypto in many ways, I am not at all sold on the idea, popular among some celebrity entrepreneur types right now, that Donald Trump is the solution the industry needs right now.
-
-Three reasons why I say that:
-
-1. **Trump's legal woes, including TKTK convictions on business fraud,** are bad PR that the industry really doesn't need right now. Among the general public, we're still suffering from association with the likes of Sam Bankman-Fried. Like a lot of people reading this newsletter, I don't believe that perception is substantively true. But it would be a really good idea for us to *show* the public it's not true by shunning proven fraudsters from other industries, including Trump.
-
-- The Fed's money printing will continue.
-
-- An American CBDC seems less likely. Powell doesn't seem keen on the idea, and if Congress passes regulation of privately issued stablecoins, will there really be a market need for an "official" one?
-
-- Antitrust scrutiny of Big Tech will continue. In my opinion, this is underrated as a positive for people building producsts for a decentralized internet. Curtailing the monopolistic practices of the web2 companies should create new opportunities.
-
-
-- We've made this partisan. That dynamic won't go away easily.
-
-- Becoming more effective at Washington's inherently evil donor game isn't necessarily a good thing. probably inconsistent with the blockchain community's core values of decentralization.
-
-- Crypto's post-FTX PR problem remains unresolved.
-
-- The reign of bitcoin as king has been solidified. It's not a security.
-
-
-- We're going to get more tied to Wall Street.
-
-- Web3 is a vehicle for global collaboration, better than government or diplomacy.
-
-- To heal the U.S., fix the dollar.
-
-
-
-
-
-
-
-
-
-
-
-
-
-5 things politicians are getting wrong about crypto
-
-- No, it's not all a scam.
-- No, it's not going to just go away.
-- The difference between network protocols and companies built on top of them.
-- The flaws in their own dollar-based system.
-- The causes of inflation.
-
-
-
-
-
-
-
-
-<!--
-
-String from the last few weeks. Some of this may be useful for newsletter, or perhaps social posts...
-
-- https://www.wsj.com/tech/personal-tech/password-security-two-factor-authentication-bank-email-phone-42a5f4cf?st=uTPpg6&reflink=desktopwebshare_permalink
-
-- VC's are embracing web3 + AI: https://www.coindesk.com/business/2024/10/24/why-web3-vcs-are-embracing-cryptoai/ |  Andreessen on AI models: https://techcrunch.com/2024/10/22/marc-andreessen-says-ai-model-makers-are-in-a-race-to-the-bottom-and-its-not-god-for-business/
-
-- Games that pay BTC to play: https://decrypt.co/205392/bitcoin-booming-you-earn-more-playing-free-games
-
-- New blockchain trilemma: https://www.coindesk.com/opinion/2024/10/18/the-new-blockchain-trilemma-is-here-and-its-not-about-technology/
-
-- Andreesen funded AI becomes a millionaire: https://www.theblock.co/post/322002/marc-andreessen-funded-ai-bot-becomes-a-millionaire-after-fartcoin-holdings-rally
-
-- Citadel's Griffin on what's wrong with Media: https://fortune.com/2024/10/11/citadel-ken-griffin-media/ <!-- Probably a good social share as well.
-
-- Talking career goals in intvus: https://www.fastcompany.com/91205202/how-should-i-talk-about-my-career-goals-in-an-interview
-
--->
-
-### Week in Review: Nov. 3-9, 2024
-
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
-
-- **Market updates:** <!-- tktk -->
-
-- https://www.coindesk.com/policy/2024/11/07/detroiters-will-be-able-to-pay-their-taxes-in-crypto-next-year-using-paypal/
-
-- https://www.coindesk.com/business/2024/11/07/coinbase-brings-bitcoin-to-solana-spurring-high-hopes-for-defi-surge/
-
-
-- How crypto is revolutionizing philanthropy. ([Salon](https://www.salon.com/2024/11/07/beyond-the-scandals-how-crypto-is-quietly-revolutionizing-philanthropy/))
-
-- Michigan's state pension system is expanding its crypto holdings. https://decrypt.co/290161/michigan-state-pension-fund-expands-crypto-holdings-10m-ethereum-buy
-
-- A FERC ruling dampened hopes that nuclear power plants will be able to sell power to tech companies at the scale they'd hoped for. https://www.wsj.com/business/energy-oil/nuclear-energys-ai-boom-blew-a-fuseheres-what-could-happen-next-aecb9724?st=5YwVgw&reflink=desktopwebshare_permalink
-
-- HBR: Moderators alone can't protect online communities. https://hbr.org/2024/11/why-moderators-cant-protect-online-communities-on-their-own
-
-- Nvidia added to the Dow. <!-- Link TK -->
-
-- Meta expands AI access to DoD. Hmmm... https://decrypt.co/290197/meta-ai-us-defense
-
-- Mt. Gox update: https://decrypt.co/290182/mt-gox-moves-2-2-billion-in-bitcoin-following-pushback-on-repayment-timeline
-
-- Asteroid mining company SpaceForge got an FCC license. https://www.space.com/space-exploration/tech/asteroid-mining-company-astroforge-gets-1st-ever-fcc-license-for-commercial-deep-space-mission
-
-- ChatGPT adds search: https://www.technologyreview.com/2024/11/05/1106603/how-chatgpt-search-paves-the-way-for-ai-agents/
-
-### Community
-
-- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
-
-<!--
-
-- Add BTC addy...
-
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
-
-- Promote gift subs...
-
--->
-
-### Odds & Ends
-
-- Goodall on people's bad tendencies versus those of chimps. https://wapo.st/3UCZwSO
-
-- Collectible banknotes are a $500 million a year market. https://www.wsj.com/finance/currencies/paper-money-banknote-collectors-1e57b07a?st=KVMagy&reflink=desktopwebshare_permalink
-
-_**That's it for now. Thanks for reading the newsletter today!**_
-
-_**About me: I'm a New York-based content creator with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization with other people getting up to speed on such stuff.**_
-
- _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
-
- _**To reach me directly with feedback, a story suggestion, or other queries, please email peter[at]w3w[dot]media.**_
-
- _**Best wishes for a healthy and productive week ahead.**_ 😊
+God help us.
