Final draft for 11/17/24

--- a/2024/2024-11-10.md
+++ b/2024/2024-11-10.md
@@ -8,9 +8,11 @@
 
 Yes, prior to Tuesday's vote, we had in hand months of polling data, probability modeling, and prediction markets showing a close presidential race between Donald Trump and Kamala Harris. Still, I think most people will  agree that seeing Trump actually complete his political comeback was stunning in a certain way, whether you supported him or not. ([I didn't](https://x.com/peteramckay/status/1847230808894886058), for the record.)
 
-If anything, the election result just created whole new questions about how and why that sit mostly outside the scope of simple [horserace-style](https://en.wikipedia.org/wiki/Horse_race_journalism) campaign metrics. The sheer variety of answers on offer in the U.S. press right now is truly stunning, some of them so directly contradictory it's kind of hilarious. Fittingly, Comedy Central host Desi Lydic captured the phenomenon nicely in [her post mortem monologue](https://youtu.be/hPHH5trgC1w?si=Cp7DusX1XF6QNrCE&t=235).
+If anything, the election result just created whole new questions about how and why that sit mostly outside the scope of simple [horserace-style](https://en.wikipedia.org/wiki/Horse_race_journalism) campaign metrics. And the sheer variety of answers on offer in the U.S. press right now is truly stunning, some of them so directly contradictory it's kind of hilarious.
 
-Sprinkled among her jokes, Lydic dropped this dead-serious truth bomb: "Honestly, i don't really care why she lost. I care why *he won*."
+Fittingly, Comedy Central host Desi Lydic captured the phenomenon nicely in [her post mortem monologue](https://youtu.be/hPHH5trgC1w?si=Cp7DusX1XF6QNrCE&t=235).
+
+Sprinkled among her jokes, Lydic dropped this dead-serious truth bomb: "Honestly, I don't really care why she lost. I care why *he won*."
 
 In that spirit, I have to say the subgenre of election analysis that prioritizes inflation to explain Trump's win strikes me as the most convincing. I say that because, compared to the other theories out there, it seems uniquely validated by [global events lately](https://www.vox.com/2024-elections/383208/donald-trump-victory-kamala-harris-global-trend-incumbents), not just the U.S. situation, and by [history](https://reason.com/2022/10/13/inflation-remixed/).
 
@@ -26,9 +28,9 @@ Central to this political narrative is inflation, which was a widespread  phenom
 
 That money printing in turn devalued major currencies -- the very essence of *what inflation is*. That has created a lingering, visceral sticker shock that voters have taken out [on incumbent-party politicians worldwide](https://news.google.com/read/CBMikwFBVV95cUxORW1WSHZGMVFRZXg0Q3lnX2d5RDlZRGhlYWR5TDNTcjZBdDZhYzRWWk81aG8tNUh6ZllCQkhKeEZYRk5vTFhUSThKMnNDOXl2ODhaUERfU1N0ZFJBQ05zbUktQUhSNk9fUFlYZC1jT3h5LTFUclhpcWVXZmt3RWNOVHBxdlNicGFTci1YNkNDNkxpdEE?hl=en-US&gl=US&ceid=US%3Aen).
 
-The perils of such "easy money" policies are a familar topic to many bitcoiners. Hence the reason I'm glad to highlight it here, in a newsletter ostensibly about technology. (Fear not. I haven't forgotten.)
+The perils of such "easy money" policies are a familar topic to many bitcoiners in particular. Hence the reason I'm glad to highlight it here, in a newsletter ostensibly about technology. (Fear not. I haven't forgotten.)
 
-As I've said before, bitcoiners [don't get enough nearly credit](https://github.com/peteramckay/w3wnewsletter/blob/master/2022/2022-06-19.md) for their diagnosis and analysis of inflation. Even if you don't care to buy bitcoin yourself, bitcoiners are often worth listening to regarding inflation purely for the sake of understanding the macroeconomics of it better.
+As I've said before, bitcoiners [don't get nearly enough credit](https://github.com/peteramckay/w3wnewsletter/blob/master/2022/2022-06-19.md) for their diagnosis and analysis of inflation. Even if you don't care to buy bitcoin yourself, bitcoiners are often worth listening to regarding inflation purely for the sake of understanding the macroeconomics of it better.
 
 Perhaps even more important right now: Politicians could generally stand to think and talk about inflation more like bitconers do, if they want to succeed. That was evident during the recent U.S. presidential campaign, and I think it will continue to be so during Trump's new term.
 
