--- a/2024/2024-11-17.md
+++ b/2024/2024-11-17.md
@@ -1,209 +1,65 @@
-
-
-
-<!-- Topic dear to the heart of crypto people. Link to old column on bitcoiners getting inflation right. -->
-
-<!-- Global elections. We had two one-term presidents -- one from each major party, as it happens -- whose terms were marred by inflation of that era. -->
-
-<!-- Acknowledge the one-year inflation rate is down. -->
-
-<!-- However, costs are still going up. The cumulative four-year inflation rate is still causing sticker shock. -->
-
-<!-- Democratic messaging: Starts by mischaracterizing why it happens. -->
-
-<!-- That money printing started under Trump. It was shared. -->
-
-<!-- Write it on the chalkboard 500 times, like Bart Simpson if you have to for it to sink it. -->
-
-<!-- It's probably coming back. Big deficits, rate cuts, and tarriffs are a recipe for it to come back. -->
-
-<!-- Perhaps next time the Democrats. That won't just . Start by accurately telling people why. -->
-
-<!--
-
-String...
-
-How exactly did Donald Trump complete such a stunning political comeback?
-
-But the cumulative 4-year increase over Biden's term of office is still creating sticker shock.
-
-Bitcoin hit a new all-time high above TKTKTK and posted a gain of 11% for the week through Saturday evening trading in New York. Ether fared even etter, leaping 25% according to CoinMarketCap data. <!-- Links TK
-
-Some tech-focused and (mostly) nonpartisan notes on the U.S. election:
-
-Marcotte: American voters are swimming in a sea of ignorance, much of it in the form of online misinformation. https://www.salon.com/2024/11/08/americas-political-discordance-the-want-progressivism/
-
-### FIT21 probably passes.
-
-### But we better make it count.
-
-There won't be a second bite at the legislative apple. Also notable: There probably won't be anything done on AI.
-
-Vox on how Trump 2nd term will be different. <!-- Need YouTube link
-
-### Gary Gensler is out.
-
-TKTK https://www.coindesk.com/policy/2024/11/07/heres-how-quickly-gary-gensler-could-lose-his-sec-chair-gig-under-trump/
-
-### Inflation -- and the "everything rally" in asset markets -- will be back.
-
-https://www.washingtonpost.com/opinions/2024/11/06/election-2024-trump-celebrity-inflation-incumbent/
-
-TKTK
-
-### At best, Trump does nothing to solve crypto's biggest PR problem. He could even make it worse.
-
-TKTK
-
-### Is it really a win to get better at manipulating such a patently corrupt system?
-
-Have we become the very thing we were supposed to fix?
-
-- https://www.salon.com/2024/11/06/the-illusion-of-donald-and-the-fourth-founding-of-america/
-
-- https://www.salon.com/2024/11/07/its-time-to-prepare-for-the-sequel/
-
-- https://www.salon.com/2024/11/07/a-womens-survival-guide-for-the-second-administration/
-
-- https://slate.com/news-and-politics/2024/11/election-results-2024-the-real-reason-kamala-harris-lost.html
-
-- https://www.washingtonpost.com/style/power/2024/11/06/michael-fanone-election-results-jan-6-capitol-police/
-
-- Record bitcoin ETF inflows: https://www.coindesk.com/markets/2024/11/08/bitcoin-etf-see-record-13b-inflows-on-trump-win-fed-rate-cuts/ | https://decrypt.co/290785/blackrocks-bitcoin-etf-sets-record-for-biggest-single-day-flow-above-1-1-billion
-
-Most of the money is going to Republicans because, as I've often noted in the newsletter, the industry is irate over federal regulators' open hostility to crypto under President Biden. Back in February, I specifically predicted there could be a [round of political payback](https://peteramckay.medium.com/bitcoiners-strike-back-at-warren-da0603bfc1f9) in the form of donations as November neared.
-
-And so here we are, on the eve of the election. Frankly, although I agree the Securities and Exchange Commission has [overreached](https://www.reuters.com/business/finance/whats-stake-grayscales-spot-bitcoin-etf-case-against-sec-2023-08-29/) against crypto in many ways, I am not at all sold on the idea, popular among some celebrity entrepreneur types right now, that Donald Trump is the solution the industry needs right now.
-
-Three reasons why I say that:
-
-1. **Trump's legal woes, including TKTK convictions on business fraud,** are bad PR that the industry really doesn't need right now. Among the general public, we're still suffering from association with the likes of Sam Bankman-Fried. Like a lot of people reading this newsletter, I don't believe that perception is substantively true. But it would be a really good idea for us to *show* the public it's not true by shunning proven fraudsters from other industries, including Trump.
-
-- The Fed's money printing will continue.
-
-- An American CBDC seems less likely. Powell doesn't seem keen on the idea, and if Congress passes regulation of privately issued stablecoins, will there really be a market need for an "official" one?
-
-- Antitrust scrutiny of Big Tech will continue. In my opinion, this is underrated as a positive for people building producsts for a decentralized internet. Curtailing the monopolistic practices of the web2 companies should create new opportunities.
-
-
-- We've made this partisan. That dynamic won't go away easily.
-
-- Becoming more effective at Washington's inherently evil donor game isn't necessarily a good thing. probably inconsistent with the blockchain community's core values of decentralization.
-
-- Crypto's post-FTX PR problem remains unresolved.
-
-- The reign of bitcoin as king has been solidified. It's not a security.
-
-
-- We're going to get more tied to Wall Street.
-
-- Web3 is a vehicle for global collaboration, better than government or diplomacy.
-
-- To heal the U.S., fix the dollar.
-
-
-5 things politicians are getting wrong about crypto
-
-- No, it's not all a scam.
-- No, it's not going to just go away.
-- The difference between network protocols and companies built on top of them.
-- The flaws in their own dollar-based system.
-- The causes of inflation.
-
-
-
-String from the last few weeks. Some of this may be useful for newsletter, or perhaps social posts...
-
-- https://www.wsj.com/tech/personal-tech/password-security-two-factor-authentication-bank-email-phone-42a5f4cf?st=uTPpg6&reflink=desktopwebshare_permalink
-
-- VC's are embracing web3 + AI: https://www.coindesk.com/business/2024/10/24/why-web3-vcs-are-embracing-cryptoai/ |  Andreessen on AI models: https://techcrunch.com/2024/10/22/marc-andreessen-says-ai-model-makers-are-in-a-race-to-the-bottom-and-its-not-god-for-business/
-
-- Games that pay BTC to play: https://decrypt.co/205392/bitcoin-booming-you-earn-more-playing-free-games
-
-- New blockchain trilemma: https://www.coindesk.com/opinion/2024/10/18/the-new-blockchain-trilemma-is-here-and-its-not-about-technology/
-
-- Andreesen funded AI becomes a millionaire: https://www.theblock.co/post/322002/marc-andreessen-funded-ai-bot-becomes-a-millionaire-after-fartcoin-holdings-rally
-
-- Citadel's Griffin on what's wrong with Media: https://fortune.com/2024/10/11/citadel-ken-griffin-media/ <!-- Probably a good social share as well.
-
-- Talking career goals in intvus: https://www.fastcompany.com/91205202/how-should-i-talk-about-my-career-goals-in-an-interview
-
-
-### Week in Review: Nov. 3-9, 2024
-
-- https://www.coindesk.com/policy/2024/11/07/detroiters-will-be-able-to-pay-their-taxes-in-crypto-next-year-using-paypal/
-
-- Michigan's state pension system is expanding its crypto holdings. https://decrypt.co/290161/michigan-state-pension-fund-expands-crypto-holdings-10m-ethereum-buy
-
-- A FERC ruling dampened hopes that nuclear power plants will be able to sell power to tech companies at the scale they'd hoped for. https://www.wsj.com/business/energy-oil/nuclear-energys-ai-boom-blew-a-fuseheres-what-could-happen-next-aecb9724?st=5YwVgw&reflink=desktopwebshare_permalink
-
-- Nvidia added to the Dow. <!-- Link TK
-
-- Meta expands AI access to DoD. Hmmm... https://decrypt.co/290197/meta-ai-us-defense
-
-- Mt. Gox update: https://decrypt.co/290182/mt-gox-moves-2-2-billion-in-bitcoin-following-pushback-on-repayment-timeline
-
-- ChatGPT adds search: https://www.technologyreview.com/2024/11/05/1106603/how-chatgpt-search-paves-the-way-for-ai-agents/
-
-### Community
-
-- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
-
-### Odds & Ends
-
-- Goodall on people's bad tendencies versus those of chimps. https://wapo.st/3UCZwSO
-
-- Collectible banknotes are a $500 million a year market. https://www.wsj.com/finance/currencies/paper-money-banknote-collectors-1e57b07a?st=KVMagy&reflink=desktopwebshare_permalink
-
-_**That's it for now. Thanks for reading the newsletter today!**_
-
-_**About me: I'm a New York-based content creator with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization with other people getting up to speed on such stuff.**_
-
- _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
-
- _**To reach me directly with feedback, a story suggestion, or other queries, please email peter[at]w3w[dot]media.**_
-
- _**Best wishes for a healthy and productive week ahead.**_ 😊
--->
-
-
-# TKTKTK
+# Crypto world parties like it's 2025
 ## Week in Review: Nov. 10-16, 2024
 
-![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
+![Investor throwing up confetti](https://w3w.news/img/ambreen-hasan-1920.jpg)
+*Photo by Ambreen Hasan via Unsplash*
 
 <!-- 100-word intro -->
 
+**Donald Trump will not officially become U.S. president** until he is sworn in at noon Jan. 20 in Washington. But don't bother telling the crypto industry that.
+
+A delirious celebration has already ensued since Trump's election win earlier this month, especially among token investors anticipating friendlier policies from the man who promised during the recent campaign to be America's first "crypto president."
+
+Bitcoin leapt nearly 20% last week to [hit a new all-time high](https://www.investopedia.com/bitcoins-price-run-continues-above-usd93-000-8744424) above $93,000 per token on Wednesday. That helped push the broader token market's global valuation above $3 trillion -- a new record as well, according to [CoinMarketCap](https://coinmarketcap.com/charts/) data.
+
+Other developments to watch as America's presidential transition plays out through the New Year:
+
+- **When will Gensler go?** Remarks by Securities and Exchange Commission Chair Gary Gensler in a speech at a regulatory conference Thursday sparked speculation that his [resignation may be imminent](https://decrypt.co/291834/gary-gensler-sec-chair-been-proud-to-serve). Gensler said he's "been proud to serve" at the SEC, using the past tense. Trump vowed during the campaign to fire Gensler, who's waged an aggressive crackdown on crypto companies.
+
+- **Reuters reports** that the Justice Deparment seems poised to shift resources [away from crypto enforcement](https://www.msn.com/en-us/money/markets/crypto-enforcement-seen-slowing-as-trump-shifts-priorities/ar-AA1uaaya) to immigration cases under the new administration.
+
+- **A Google breakup now seems less likely.** Trump seems likely to [let pending antitrust cases continue](https://www.fastcompany.com/91223853/trump-win-google-antitrust-cases) against several Big Tech companies. But he's publicly been averse to one of the most dreaded options pending against Google in particular in the penalty phase of a case it recently lost to the Justice Department.
+
+- **Inflation could yet rear its head.** One of the few [speed bumps](https://cointelegraph.com/news/bitcoin-corrects-as-us-inflation-data-emerges-is-the-rally-to-100k-at-stake) in the post-election crypto rally so far was the release of new data last week showing [an uptick](https://www.morningstar.co.uk/uk/news/257272/us-inflation-rises-fed-rate-cut-still-expected-in-december.aspx) in U.S. inflation in October. If that trend continues, perhaps pushed along by Trump's proposal to [impose widespread tariffs](https://www.cnn.com/2024/06/26/business/nobel-economists-trump-inflation/index.html), it could yet put a damper on riskier assets like stocks and crypto.
+
+On to some notable headlines elsewhere:
+
 ### Week in Review: Nov. 10-16, 2024
 
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
+- **Most Wall Street banks' holdings of exchange-traded bitcoin funds held steady** in the third quarter. Goldman Sachs was a notable exception, however, as its clients showed a heavier appetite to add bitcoin exposure. That pushed Goldman's bitcoin ETF holdings to $710 million, up 70% from the second period, according to regulatory filings. ([CoinDesk](https://www.coindesk.com/business/2024/11/15/bank-clients-just-dipped-their-toes-into-bitcoin-etfs-but-q4-could-see-a-fomo-spike/))
 
-- https://www.coindesk.com/business/2024/11/07/coinbase-brings-bitcoin-to-solana-spurring-high-hopes-for-defi-surge/
+- **El Salvador and Bhutan** have seen their sovereign holdings of bitcoin grow in value by hundreds of millions of dollars thanks to the token's recent rally. ([CoinDesk](https://www.coindesk.com/markets/2024/11/12/el-salvadors-bitcoin-stash-rises-above-500m-but-bhutan-story-might-be-even-bigger/))
 
-- How crypto is revolutionizing philanthropy. ([Salon](https://www.salon.com/2024/11/07/beyond-the-scandals-how-crypto-is-quietly-revolutionizing-philanthropy/))
+- **Franklin Templeton added one of its money-market funds** to the Ethereum chain. The offering was previously available on the Base, Aptos, and Avalanche platforms as well. ([CoinDesk](https://www.coindesk.com/business/2024/11/14/franklin-templeton-expands-410m-money-market-fund-to-ethereum-blockchain/))
 
-- HBR: Moderators alone can't protect online communities. https://hbr.org/2024/11/why-moderators-cant-protect-online-communities-on-their-own
+- **Weekly trading volume in U.S.-listed ether ETFs** rose 44% to $1.63 billion, a new record. ([The Block](https://www.theblock.co/post/325565/ethereum-etfs-record-highest-weekly-trading-volume-since-launch))
 
-- Asteroid mining company SpaceForge got an FCC license. https://www.space.com/space-exploration/tech/asteroid-mining-company-astroforge-gets-1st-ever-fcc-license-for-commercial-deep-space-mission
+- **Pennsylvania might create a state bitcoin reserve** under a bill recently introduced in its House of Representatives. ([Decrypt](https://decrypt.co/291821/pennsylvania-strategic-bitcoin-reserve))
 
-### Community
+- **His Majesty's Treasury is launching a pilot program** to offer British government bonds on-chain. ([The Block](https://www.theblock.co/post/326778/uk-to-pilot-digital-gilt-instrument-leveraging-distributed-ledger-technology))
 
-- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
+- **Japanese tech-investment firm SoftBank is profitable again.** Its latest quarterly results were boosted by its chip-design business and the end of losses from its infamous investment in WeWork. ([Associated Press](https://apnews.com/article/japan-earnings-ai-softbank-ventures-investment-3c2797d224d6798c0dd8698b38d137db))
+
+- **Elon Musk argued vehemently** against OpenAI's plan to [do an initial coin offering](https://www.theblock.co/post/326832/elon-musk-shot-down-openais-proposed-ico-in-2018-court-filing) (ICO) in 2018, according to new court filings. Separately, Dogecoin investors [dropped a class-action lawsuit](https://www.theblock.co/post/326825/dogecoin-lawsuit-against-elon-musk-dropped-amid-market-surge) against Musk for manipulating the token.
 
 <!--
 
-- Add BTC addy...
+- **Podcast picks:** Shin on Blackrock. a16z on AI trading. https://unchainedcrypto.com/podcast/how-blackrock-the-worlds-largest-asset-manager-took-crypto-mainstream/ | https://web3-with-a16z.simplecast.com/episodes/ai-bots-memecoins
 
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
-
-- Promote gift subs...
+- https://www.coindesk.com/markets/2024/11/15/this-og-bitcoin-investor-just-turned-120-into-178m/
 
 -->
 
+
+### Community
+
+- **We have great exclusive content coming for paid subscribers to w3w!** For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
+
 ### Odds & Ends
 
-- tktk
+- **Shall we play a drinking game?** Wall Street Journal tech columnist Joanna Stern has been testing new conversational AI apps by... [going camping with them](https://www.wsj.com/tech/personal-tech/ai-chatbots-chatgpt-gemini-copilot-meta-c6835d9d?st=7fmTK3&reflink=desktopwebshare_permalink)?
+
+- **No one expected actor Timothée Chalamet himself** to show up for a celebrity look-alike contest in New York in September. But then [he did.](https://www.wsj.com/style/celebrity-look-alike-contests-timothe-chalamet-gladiator-paul-mescal-03c5ace0?st=L4PowS&reflink=desktopwebshare_permalink)
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
