--- a/2024/2024-11-17.md
+++ b/2024/2024-11-17.md
@@ -14,13 +14,13 @@ Bitcoin leapt nearly 20% last week to [hit a new all-time high](https://www.inve
 
 Other developments to watch as America's presidential transition plays out through the New Year:
 
-- **When will Gensler go?** Remarks by Securities and Exchange Commission Chair Gary Gensler in a speech at a regulatory conference Thursday sparked speculation that his [resignation may be imminent](https://decrypt.co/291834/gary-gensler-sec-chair-been-proud-to-serve). Gensler said he's "been proud to serve" at the SEC, using the past tense. Trump vowed during the campaign to fire Gensler, who's waged an aggressive crackdown on crypto companies.
+- **When will Gensler go?** Remarks by Securities and Exchange Commission Chair Gary Gensler in a speech at a conference Thursday sparked speculation that his [resignation may be imminent](https://decrypt.co/291834/gary-gensler-sec-chair-been-proud-to-serve). Gensler said he's "been proud to serve" at the SEC, using the past tense. Trump vowed during the campaign to fire Gensler, who's waged an aggressive crackdown on crypto companies.
 
-- **Reuters reports** that the Justice Deparment seems poised to shift resources [away from crypto enforcement](https://www.msn.com/en-us/money/markets/crypto-enforcement-seen-slowing-as-trump-shifts-priorities/ar-AA1uaaya) to immigration cases under the new administration.
+- **Reuters reports** that the Justice Deparment is poised to shift resources [away from crypto enforcement](https://www.msn.com/en-us/money/markets/crypto-enforcement-seen-slowing-as-trump-shifts-priorities/ar-AA1uaaya) to immigration cases under the new administration.
 
-- **A Google breakup now seems less likely.** Trump seems likely to [let pending antitrust cases continue](https://www.fastcompany.com/91223853/trump-win-google-antitrust-cases) against several Big Tech companies. But he's publicly been averse to one of the most dreaded options pending against Google in particular in the penalty phase of a case it recently lost to the Justice Department.
+- **A full breakup of Google now seems less likely.** Trump seems likely to [let pending antitrust cases continue](https://www.fastcompany.com/91223853/trump-win-google-antitrust-cases) against several Big Tech companies. But he's publicly been averse to one of the most dreaded options under consideration in the penalty phase of a case Google recently lost to the Justice Department.
 
-- **Inflation could yet rear its head.** One of the few [speed bumps](https://cointelegraph.com/news/bitcoin-corrects-as-us-inflation-data-emerges-is-the-rally-to-100k-at-stake) in the post-election crypto rally so far was the release of new data last week showing [an uptick](https://www.morningstar.co.uk/uk/news/257272/us-inflation-rises-fed-rate-cut-still-expected-in-december.aspx) in U.S. inflation in October. If that trend continues, perhaps pushed along by Trump's proposal to [impose widespread tariffs](https://www.cnn.com/2024/06/26/business/nobel-economists-trump-inflation/index.html), it could yet put a damper on riskier assets like stocks and crypto.
+- **Inflation could yet rear its head.** One of the few [speed bumps](https://cointelegraph.com/news/bitcoin-corrects-as-us-inflation-data-emerges-is-the-rally-to-100k-at-stake) in the post-election crypto rally so far was the release of new data showing [an uptick](https://www.morningstar.co.uk/uk/news/257272/us-inflation-rises-fed-rate-cut-still-expected-in-december.aspx) in U.S. inflation in October. If that trend continues, perhaps pushed along by Trump's proposal to [impose widespread tariffs](https://www.cnn.com/2024/06/26/business/nobel-economists-trump-inflation/index.html), it could yet put a damper on riskier assets like stocks and crypto.
 
 On to some notable headlines elsewhere:
 
