--- a/2024/2024-11-17.md
+++ b/2024/2024-11-17.md
@@ -18,7 +18,7 @@ Other developments to watch as America's presidential transition plays out throu
 
 - **Reuters reports** that the Justice Deparment is poised to shift resources [away from crypto enforcement](https://www.msn.com/en-us/money/markets/crypto-enforcement-seen-slowing-as-trump-shifts-priorities/ar-AA1uaaya) to immigration cases under the new administration.
 
-- **A full breakup of Google now seems less likely.** Trump seems likely to [let pending antitrust cases continue](https://www.fastcompany.com/91223853/trump-win-google-antitrust-cases) against several Big Tech companies. But he's publicly been averse to one of the most dreaded options under consideration in the penalty phase of a case Google recently lost to the Justice Department.
+- **A full breakup of Google now seems less likely.** Trump will probably [let pending antitrust cases continue](https://www.fastcompany.com/91223853/trump-win-google-antitrust-cases) against several Big Tech companies. But he's publicly been averse to one of the most dreaded options under consideration in the penalty phase of a case Google has already lost to the Justice Department.
 
 - **Inflation could yet rear its head.** One of the few [speed bumps](https://cointelegraph.com/news/bitcoin-corrects-as-us-inflation-data-emerges-is-the-rally-to-100k-at-stake) in the post-election crypto rally so far was the release of new data showing [an uptick](https://www.morningstar.co.uk/uk/news/257272/us-inflation-rises-fed-rate-cut-still-expected-in-december.aspx) in U.S. inflation in October. If that trend continues, perhaps pushed along by Trump's proposal to [impose widespread tariffs](https://www.cnn.com/2024/06/26/business/nobel-economists-trump-inflation/index.html), it could yet put a damper on riskier assets like stocks and crypto.
 
