--- a/2024/2024-11-24.md
+++ b/2024/2024-11-24.md
@@ -1,39 +1,52 @@
-# TKTKTK
+# Bitcoin's brush with a six-figure benchmark
 ## Week in Review: Nov. 17-23, 2024
 
-![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).*
+![A Christmas-y bitcoin emblem](https://w3w.news/img/traxer-1920.jpg)
+*Photo by Traxer via Unsplash*
 
-<!-- 100-word intro -->
+**Not yet.**
+
+Bitcoin stalled just [a few hundred dollars shy](https://cointelegraph.com/news/bitcoin-spoofing-btc-price-97-4-k-record-profit-taking) of hitting the long-awaited $100,000 milestone on Friday. But no matter.
+
+Longtime investors are still in an ebullient mood, a new all-time high has been set, and the longer-term bull market has gained second wind due to optimism that friendlier crypto regulation is on the way in America from the forthcoming Trump administration.
+
+Some highlights:
+
+- **Securities and Exchange Commission Chair Gary Gensler,** a staunch crypto foe, announced Thursday [he will resign](https://www.cnbc.com/2024/11/21/sec-chair-gensler-will-step-down-jan-20-making-way-for-trump-replacement.html) effective Jan. 20, the day Donald Trump will be sworn in as president. Democratic appointee Jaime Lizárraga also said he plans to [leave the commission](https://decrypt.co/293207/another-democrat-quits-sec-gensler).
+
+- **Trump nominated a pair of pro-blockchain financiers for cabinet positions.** Hedge-fund manager Scott Bessent was tapped to be [Treasury Secretary](https://www.coindesk.com/policy/2024/11/22/trump-plans-to-name-pro-crypto-hedge-fund-manager-scott-bessent-as-treasury-secretary). Cantor Fitzgerald founder Howard Lutnick, a longtime [banking partner](https://www.wsj.com/finance/currencies/howard-lutnick-giancarlo-devasini-tether-cryptocurrency-3d0a961c?st=m9XfjC&reflink=desktopwebshare_permalink) to stablecoin issuer Tether, was nominated for [Commerce Secretary](https://www.cnn.com/2024/11/20/business/commerce-secretary-trump-crypto/index.html). Both have to be confirmed by the U.S. Senate.
+
+- **A new crypto czar?** Trump is also reportedly weighing appointment of the first White House-level "crypto czar" to coordinate policies affecting the industry across all federal agencies. ([Daily Beast](https://www.thedailybeast.com/trump-team-weighs-creating-first-ever-crypto-czar/))
+
+- **As of Sunday evening in New York,** bitcoin was trading around $97,000 per token, up 8% for the week. Heading into the last few weeks of 2024, it's up 129% for the year to date, well ahead of the S&P 500's 25% gain.  
+
+- **Veteran commodity strategist George Milling-Stanley,** of State Street Global Advisors, fretted in an [interview with CNBC](https://www.cnbc.com/2024/11/23/bitcoin-vs-gold-state-street-worries-about-crypto-rally.html) that the bitcoin rally may be drawing investor attention away from gold, a more traditional safe haven against economic turbulence.
+
+On to the week's other notable headlines:
 
 ### Week in Review: Nov. 17-23, 2024
 
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
+- **Chipmaker Nvidia reported record quarterly earnings Wednesday,** boosted by its sales to the burgeoning AI market. However, its stock was little changed due to the astronomical expectations investors have already priced in to any stock remotely related to AI. ([Fortune](https://news.google.com/read/CBMipgFBVV95cUxONVFhb0dpN2k2MnNXNFRIZ25BV2h0bFJtbDN2LUxPV3VNR2IwckpEajAtdkhGVVlsSjc0eXhhZlpMWU5mamRpX0VGek5qTzdkMzJWME1xRElZRER2d2FMNjlLWmt6LVNQRlZmM3lUOFVRYTJPdWNSV05pLWs2V3BiR21jdDRBSlA5ZXVYM0l1QkVKZGJ5RWNpangxblBJTmVvU0Y0b0tn?hl=en-US&gl=US&ceid=US%3Aen))
 
-- tk
+- **The U.S. Department of Justice** wants a federal judge in an antitrust case against Google to force the search giant to sell its Chrome web browser. ([Wall Street Journal](https://www.wsj.com/tech/google-should-be-forced-to-sell-chrome-browser-justice-department-says-13602df9?st=dxx5vR&reflink=desktopwebshare_permalink))
 
-- tk
+- **Mastercard and JPMorgan are partnering** to offer blockchain-based international payments. ([CoinDesk](https://www.coindesk.com/business/2024/11/21/mastercard-and-jpmorgan-link-up-to-bring-foreign-exchange-on-the-blockchain/))
 
-- tk
+- **DCG founder Barry Silbert** is launching a decentralized AI company dubbed Yuma. The startup is the latest high-profile bet on the intersection of blockchain and AI. ([Wall Street Journal](https://www.wsj.com/finance/currencies/the-crypto-magnate-barry-silbert-pins-his-comeback-on-ai-18261299?st=dZN6Mt&reflink=desktopwebshare_permalink))
+
+- **Researchers at New York's Stony Brook University** published a new study of "typosquatting" crypto scams in which criminals exploit tiny misspellings in on-chain web addresses to trick people into sending tokens to the scammers' wallets. Yikes. ([Fast Company](https://www.fastcompany.com/91228285/scammers-are-making-thousands-of-dollars-through-blockchain-typosquatting))
+
+- **The global soccer federation FIFA** announced it will offer a blockchain-based mobile game next year. ([Blockworks](https://blockworks.co/news/fifa-blockchain-mobile-game))
 
 ### Community
 
 - **We have great exclusive content coming for paid subscribers to w3w!** For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
 
-<!--
-
-- Add BTC addy...
-
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
-
-- Promote gift subs...
-
--->
-
 ### Odds & Ends
 
-- TK
-- TK
+- **Researchers found a 35,000-year-old mummified saber-tooth kitten in Siberia's permafrost.** The remarkably well-preserved specimen, including even the animal's whiskers, claws, and fur, is already yielding new insights about a species that has been extinct for 12,000 years. ([National Public Radio](https://www.npr.org/2024/11/16/nx-s1-5193845/35000-year-old-kitten-siberia-frozen))
+
+- **Tron founder Justin Sun submitted the "winning" $6.5 million bid** in a Sotheby's "art" auction of a banana duct-taped to a wall. Sun said he plans to eat the banana. ([Wall Street Journal](https://www.wsj.com/arts-culture/sotheby-s-auction-banana-duct-tape-maurizio-cattelan-justin-sun-art-basel-miami-02231817?st=zjZQMA&reflink=desktopwebshare_permalink))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
